[gd_scene load_steps=2 format=3 uid="uid://bqxvn8y8qkqxe"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_0s8vw"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0s8vw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Gita Heart Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="SettingsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LanguageContainer" type="HBoxContainer" parent="VBoxContainer/SettingsContainer"]
layout_mode = 2

[node name="LanguageLabel" type="Label" parent="VBoxContainer/SettingsContainer/LanguageContainer"]
layout_mode = 2
text = "Language:"

[node name="LanguageOption" type="OptionButton" parent="VBoxContainer/SettingsContainer/LanguageContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScoringContainer" type="HBoxContainer" parent="VBoxContainer/SettingsContainer"]
layout_mode = 2

[node name="ScoringLabel" type="Label" parent="VBoxContainer/SettingsContainer/ScoringContainer"]
layout_mode = 2
text = "Enable Scoring:"

[node name="ScoringCheckbox" type="CheckBox" parent="VBoxContainer/SettingsContainer/ScoringContainer"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="GameModesContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VerseCompletionBtn" type="Button" parent="VBoxContainer/GameModesContainer"]
layout_mode = 2
text = "Verse Completion"

[node name="VerseIdentificationBtn" type="Button" parent="VBoxContainer/GameModesContainer"]
layout_mode = 2
text = "Verse Identification"

[node name="ChapterSequenceBtn" type="Button" parent="VBoxContainer/GameModesContainer"]
layout_mode = 2
text = "Chapter Sequence"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ScoreContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="VBoxContainer/ScoreContainer"]
layout_mode = 2
text = "Score: 0"
horizontal_alignment = 1
